--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -614,6 +614,9 @@ label {
   cursor: pointer;
   fill: #fd0000;
 }
+.formulario .formulario-titulo .eraser-button:hover {
+  cursor: pointer;
+}
 
 .formulario .formulario-titulo h2 {
   font-size: 1.2em;
@@ -644,7 +647,7 @@ select {
   padding: 0;
   margin: 0;
   height: 2em;
-  width: 100%;
+  width: 50%;
 }
 
 .sidebar {
