--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -50,6 +50,12 @@
         fill: rgb(253, 0, 0);
     }
 
+    .eraser-button:hover{
+        cursor: pointer;
+        
+        
+    }
+
 }
 
 .formulario .formulario-titulo h2{
@@ -81,6 +87,6 @@ select{
     padding: 0; 
     margin:0;
     height: 2em;
-    width: 100%;
+    width: 50%;
 }
 
