--- a/resources/sass/admin/mobile/layout/_save.scss
+++ b/resources/sass/admin/mobile/layout/_save.scss
@@ -1,26 +1,43 @@
-.save-container{
-    width: 10em;
-    height: 5em;
-    margin-left: 60vh;
-    margin-top: 8vh;
+#save-container{
+
+    display: none;
+    transition: display 4s;
     
-}
-
-.save-message{
-        display: none;
-
+    p{
+        margin: 0;
+        color: aliceblue;
+        font-weight: 900;
     }
 
+    svg{
+        margin-right: 1em;
+    }
 
-#save-show.show{
+    @keyframes successful {
+        100%   { left: 70%; }
+    }
 
-    .save-message{
-        justify-content: right;
-        height: 15vh;
-        margin-top: 5em;
-    }   
-}
+    &.show{
+        display: flex;
+        width: 20em;
+        height: 5em;
+        background-color: grey;
+        text-align: center;
+        position: absolute;
+        font-size: .8em;
+        top: 5%;
+        left: 120%;
+        opacity: 90%;
+        border-radius: 2px;
+        box-shadow: 0px 0px 7px #292929;
+        -moz-box-shadow: 0px 0px 7px #292929;
+        animation-name: successful;
+        animation-duration: 2s;
 
-.show{
-    display: block;
+        .save-show{
+            display: flex;
+            margin: auto 1em;
+        }
+    }
+
 }
